--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 middle">
-                        <input type="button" value="pdf resume" class="btn btn-green-resume" onclick="location.href='';">
+                        <input type="button" value="pdf resume" class="btn btn-green-resume" onclick="location.href='doc/brandonwilliamsresume.pdf';">
                     </div>
                 </div>    
             </div>
