--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
                 <div class="row padded-bottom-35 font-blue">
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/northwesternN.jpg">
+                        <img class="img-circle" src="img/Northwestern Seal.jpg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>B.S. Mechanical Engineering</h4>
@@ -300,7 +300,7 @@
                         <h4 class="font-normal">GPA: 3.42/4.00
                     </div>
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/northwesternN.jpg">
+                        <img class="img-circle" src="img/segal-logo-mobile.svg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>M.S. Engineering Design Innovation</h4>
@@ -315,7 +315,7 @@
                 </div>
                 <div class="row padded-bottom-35 font-blue">
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/hospira.jpg">
+                        <img class="img-circle" src="img/hospira.jpg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>Engineering Design Intern</h4>
@@ -323,7 +323,7 @@
                         <h4 class="font-normal">June '13 - August '13</h4>
                     </div>
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/k2.jpg">
+                        <img class="img-circle" src="img/k2.jpg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>Design Lead</h4>
@@ -338,7 +338,7 @@
                 </div>
                 <div class="row padded-bottom-100 font-blue">
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/pandg.jpg">
+                        <img class="img-circle" src="img/pandg.jpg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>Design Studio 1</h4>
@@ -346,7 +346,7 @@
                         <h4 class="font-normal">September '13 - December '13</h4>
                     </div>
                     <div class="col-xs-2 col-sm-1 col-md-1 ">
-                        <img class="img-circle" src="img/samsung.jpg">
+                        <img class="img-circle" src="img/samsung.jpg" width="100" height="100">
                     </div>
                     <div class="col-xs-10 col-sm-5 col-md-5 middle ">
                         <h4>Design Studio 2</h4>
